Longs Helper methods