@@ -3,6 +3,10 @@ package com.hazardalert.common;
 import java.util.ArrayList;
 
 public class Longs extends ArrayList<Long> {
+	public boolean contains(int a) {
+		return contains(Long.valueOf(a));
+	}
+
 	public boolean contains(Long a) {
 		for (Long b : this) {
 			if (0 == a.compareTo(b)) {
@@ -13,7 +17,7 @@ public class Longs extends ArrayList<Long> {
 	}
 
 	public boolean add(int a) {
-		return add(new Long(a));
+		return add(Long.valueOf(a));
 	}
 
 	@Override
@@ -22,5 +26,16 @@ public class Longs extends ArrayList<Long> {
 			return false;
 		}
 		return super.add(a);
+	}
+
+	public boolean removeLong(int a) {
+		return removeLong(Long.valueOf(a));
+	}
+
+	public boolean removeLong(Long a) {
+		if (!contains(a)) {
+			return false;
+		}
+		return super.remove(a);
 	}
 }
